@@ -74,11 +74,13 @@ public class AuthServiceImpl implements IAuthService{
                 String refreshToken = tokenUtil.generateToken();
                 String refreshTokenId = tokenUtil.generateToken();
 
+                long tokenVersion = authSessionStore.getTokenVersion(user.getId());
                 Map<String, Object> claims = new HashMap<>();
                 claims.put("username", user.getUsername());
                 claims.put("role", user.getRole());
                 claims.put("sid", sid);
                 claims.put("type", "access");
+                claims.put("tokenVersion", tokenVersion);
                 String accessToken = jwtTokenService.generateAccessToken(
                     claims,
                     String.valueOf(user.getId()),
@@ -162,11 +164,13 @@ public class AuthServiceImpl implements IAuthService{
             String role = String.valueOf(session.get("role"));
 
             String jti = tokenUtil.generateToken();
+            long tokenVersion = authSessionStore.getTokenVersion(userId);
             Map<String, Object> claims = new HashMap<>();
             claims.put("username", username);
             claims.put("role", role);
             claims.put("sid", sid);
             claims.put("type", "access");
+            claims.put("tokenVersion", tokenVersion);
 
             String accessToken = jwtTokenService.generateAccessToken(
                     claims,
@@ -242,7 +246,7 @@ public class AuthServiceImpl implements IAuthService{
             if (!isAdmin(currentUser)) {
                 return ResponseVO.forbidden("权限不足");
             }
-            if (sid == null || sid.isBlank()) {
+            if (sid == null || sid.trim().isEmpty()) {
                 return ResponseVO.badRequest("sid不能为空");
             }
 
@@ -295,16 +299,16 @@ public class AuthServiceImpl implements IAuthService{
 
     private List<SessionInfoVO> buildSessionInfos(Set<String> sids) {
         return sids.stream()
-                .map(sid -> Map.entry(sid, authSessionStore.getSession(sid)))
-                .filter(entry -> entry.getValue() != null && !entry.getValue().isEmpty())
-                .map(entry -> new SessionInfoVO()
-                        .setSid(entry.getKey())
-                        .setUsername(String.valueOf(entry.getValue().get("username")))
-                        .setRole(String.valueOf(entry.getValue().get("role")))
-                        .setLoginAt(String.valueOf(entry.getValue().get("loginAt")))
-                        .setLastActiveAt(String.valueOf(entry.getValue().get("lastActiveAt")))
-                        .setStatus(String.valueOf(entry.getValue().get("status"))))
-                .collect(Collectors.toList());
+            .map(sid -> new java.util.AbstractMap.SimpleEntry<>(sid, authSessionStore.getSession(sid)))
+            .filter(entry -> entry.getValue() != null && !entry.getValue().isEmpty())
+            .map(entry -> new SessionInfoVO()
+                .setSid(entry.getKey())
+                .setUsername(String.valueOf(entry.getValue().get("username")))
+                .setRole(String.valueOf(entry.getValue().get("role")))
+                .setLoginAt(String.valueOf(entry.getValue().get("loginAt")))
+                .setLastActiveAt(String.valueOf(entry.getValue().get("lastActiveAt")))
+                .setStatus(String.valueOf(entry.getValue().get("status"))))
+            .collect(Collectors.toList());
     }
 
     private User getCurrentUser(Long currentUserId) {
